...
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_width" />

    <EditText
        android:id="@+id/field_projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Project Name"
        android:text=""
        android:clickable="false"
...
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_height" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="Create"
        android:textColor="@color/black"
        android:backgroundTint="@color/color_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        android:text="Background Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_projectName" />

    <RadioGroup
...
            android:layout_height="wrap_content"
            android:text="Dark"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="454dp" />

        <RadioButton
            android:id="@+id/fc_light_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Light"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="454dp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
